# radix-treinamento-cognite-flow-grupo-3

./: .cursorignore  .env.example  .gitignore  .mcp.json  .npmrc  AGENTS.md  App-Brief.md  SPEC.md  app.json  eslint.config.mjs  index.html  manifest.json  package-lock.json  package.json  prompt_dmbl_impact.md  prompt_seed_dados.md  skills-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
seed/app_seed/: README.md  pyproject.toml  requirements.txt
seed/app_seed/app_seed/: __init__.py  __main__.py  cli.py
seed/app_seed/app_seed/config/: __init__.py  model_ids.py  settings.py
seed/app_seed/app_seed/data/: __init__.py  cdf_gateway.py  cognite_cdf_gateway.py  csv_route_reader.py  json_seed_repository.py
seed/app_seed/app_seed/domain/: __init__.py  constants.py  entities.py  instances.py  naming.py  refs.py  timestamps.py
seed/app_seed/app_seed/injectors/: __init__.py  container.py
seed/app_seed/app_seed/models/: __init__.py  seed_bundle.py
seed/app_seed/app_seed/services/: __init__.py  calibration_service.py  measurement_mapper.py  seed_builder_service.py  seed_metadata.py  seed_populator_service.py
seed/app_seed/app_seed/services/factories/: __init__.py  asset_factory.py  checklist_factory.py  edge_factory.py  (+2 more)
seed/app_seed/data/: apm-app-data-route-1-seed.json
seed/app_seed/tests/: conftest.py  test_calibration_service.py  test_csv_route_reader.py  test_json_seed_repository.py  test_measurement_mapper.py  test_naming.py  test_seed_builder_service.py  test_seed_bundle.py  test_seed_populator_service.py
(+268 files in other folders)
